group_id fix
