# internal/delivery/http/dto/dto.go
@@ -252,19 +252,20 @@ type Trends struct {
 }
 
 type CombinedPositionsRequest struct {
-	SiteID       int     `form:"site_id" binding:"required"`
-	Source       *string `form:"source" binding:"omitempty,oneof=google yandex"`
-	Wordstat     *bool   `form:"wordstat"`
-	WordstatSort *string `form:"wordstat_sort" binding:"omitempty,oneof=asc desc"`
-	DateFrom     *string `form:"date_from"`
-	DateTo       *string `form:"date_to"`
-	DateSort     *string `form:"date_sort"`
-	SortType     *string `form:"sort_type" binding:"omitempty,oneof=asc desc"`
-	RankFrom     *int    `form:"rank_from" binding:"omitempty,min=0"`
-	RankTo       *int    `form:"rank_to" binding:"omitempty,min=0"`
-	Page         int     `form:"page" binding:"omitempty,min=1"`
-	PerPage      int     `form:"per_page" binding:"omitempty,min=1,max=100"`
-	GroupID      *int    `form:"group_id"`
+	SiteID        int     `form:"site_id" binding:"required"`
+	Source        *string `form:"source" binding:"omitempty,oneof=google yandex"`
+	Wordstat      *bool   `form:"wordstat"`
+	WordstatSort  *string `form:"wordstat_sort" binding:"omitempty,oneof=asc desc"`
+	DateFrom      *string `form:"date_from"`
+	DateTo        *string `form:"date_to"`
+	DateSort      *string `form:"date_sort"`
+	SortType      *string `form:"sort_type" binding:"omitempty,oneof=asc desc"`
+	RankFrom      *int    `form:"rank_from" binding:"omitempty,min=0"`
+	RankTo        *int    `form:"rank_to" binding:"omitempty,min=0"`
+	Page          int     `form:"page" binding:"omitempty,min=1"`
+	PerPage       int     `form:"per_page" binding:"omitempty,min=1,max=100"`
+	GroupID       *int    `form:"group_id"`
+	FilterGroupID *int    `form:"filter_group_id"`
 }
 
 type CombinedPositionsResponse struct {
